--- a/index.html
+++ b/index.html
@@ -12,13 +12,21 @@
         <div class="Welcome">
           <form>
             <fieldset class="main">
-                    <legend>Computer</legend>
+                    <fieldset>
+                        <legend>User Info</legend>
+                   
                     <fieldset>
                         <legend>Login</legend>
-                        <label for="username"><input type="text" name="username"></label>
-                        <label for="password"><input type="password" name="password"></label>
-                        <label for="email"><input type="email" name="email"></label>
+                        <label for="username">username<input type="text" name="username" placeholder=""></label>
+                        <label for="password">password<input type="password" name="password"></label>
+                        
                     </fieldset>
+                    <fieldset>
+                        <legend>Contact info</legend>
+                        <label for="number"><input type="tel" name="number"></label>
+                        <label for="email"><input type="email" name="mail"></label>
+                    </fieldset>   
+                </fieldset>                      
             </fieldset>
           </form>
         </div>
