--- a/index.html
+++ b/index.html
@@ -19,14 +19,62 @@
                         <legend>Login</legend>
                         <label for="username">username<input type="text" name="username" placeholder=""></label>
                         <label for="password">password<input type="password" name="password"></label>
-                        
                     </fieldset>
-                    <fieldset>
-                        <legend>Contact info</legend>
-                        <label for="number"><input type="tel" name="number"></label>
-                        <label for="email"><input type="email" name="mail"></label>
-                    </fieldset>   
-                </fieldset>                      
+                        <fieldset>
+                            <legend>Contact info</legend>
+                            <label for="number"><input type="tel" name="number"></label>
+                            <label for="email"><input type="email" name="mail"></label>
+                        </fieldset>  
+                </fieldset>
+            <fieldset>
+                <legend>Computer Spec</legend>
+                <label for="Proc">Processor
+                    <select name="Proc" id="">
+                        <optgroup label="AMD">
+                            <option value="">Ryzen 9</option>
+                            <option value="">Ryzen 7</option>
+                            <option value="">Ryzen 5</option>
+                        </optgroup>
+                        <optgroup label="Intel">
+                            <option value=""></option>
+                            <option value=""></option>
+                            <option value=""></option>
+                        </optgroup>
+                    </select>
+                </label>
+                <label for="">Motherboard
+                    <select name="" id="">
+                        <optgroup>
+                            <option value=""></option>
+                            <option value=""></option>
+                        </optgroup>
+                    </select>
+                </label>
+                <label for="">Graphic Card
+                    <select name="" id="">
+                        <optgroup>
+                            <option value=""></option>
+                            <option value=""></option>
+                        </optgroup>
+                    </select>
+                </label>
+                <label for="">Case
+                    <select name="" id="">
+                        <optgroup>
+                            <option value=""></option>
+                            <option value=""></option>
+                        </optgroup>
+                    </select>
+                </label>
+                <label for="">Ram
+                    <select name="" id="">
+                        <optgroup>
+                            <option value=""></option>
+                            <option value=""></option>
+                        </optgroup>
+                    </select>
+                </label>
+            </fieldset>                  
             </fieldset>
           </form>
         </div>
