--- a/index.html
+++ b/index.html
@@ -27,54 +27,34 @@
                         </fieldset>  
                 </fieldset>
             <fieldset>
-                <legend>Computer Spec</legend>
-                <label for="Proc">Processor
-                    <select name="Proc" id="">
-                        <optgroup label="AMD">
-                            <option value="">Ryzen 9</option>
-                            <option value="">Ryzen 7</option>
-                            <option value="">Ryzen 5</option>
-                        </optgroup>
-                        <optgroup label="Intel">
-                            <option value=""></option>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </optgroup>
-                    </select>
-                </label>
-                <label for="">Motherboard
+                <legend>PC specs</legend>
+                <label for="">
                     <select name="" id="">
-                        <optgroup>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </optgroup>
+                        <option value=""></option>
+                        <option value=""></option>
                     </select>
-                </label>
-                <label for="">Graphic Card
+                </label><label for="">
                     <select name="" id="">
-                        <optgroup>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </optgroup>
+                        <option value=""></option>
+                        <option value=""></option>
                     </select>
-                </label>
-                <label for="">Case
+                </label><label for="">
                     <select name="" id="">
-                        <optgroup>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </optgroup>
+                        <option value=""></option>
+                        <option value=""></option>
                     </select>
-                </label>
-                <label for="">Ram
+                </label><label for="">
                     <select name="" id="">
-                        <optgroup>
-                            <option value=""></option>
-                            <option value=""></option>
-                        </optgroup>
+                        <option value=""></option>
+                        <option value=""></option>
+                    </select>
+                </label><label for="">
+                    <select name="" id="">
+                        <option value=""></option>
+                        <option value=""></option>
                     </select>
                 </label>
-            </fieldset>                  
+            </fieldset>        
             </fieldset>
           </form>
         </div>
