little update on select options

--- a/index.html
+++ b/index.html
@@ -22,36 +22,58 @@
                     </fieldset>
                         <fieldset>
                             <legend>Contact info</legend>
-                            <label for="number"><input type="tel" name="number"></label>
-                            <label for="email"><input type="email" name="mail"></label>
+                            <label for="number">phone number<input type="tel" name="number"></label>
+                            <label for="email">email<input type="email" name="mail"></label>
                         </fieldset>  
                 </fieldset>
+            
+            
             <fieldset>
-                <legend>PC specs</legend>
-                <label for="">
+                <legend>PC parts producers</legend>
+                <label for="">Processor
                     <select name="" id="">
-                        <option value=""></option>
-                        <option value=""></option>
+                        <option>AMD</option>
+                        <option></option>Intel</option>
                     </select>
-                </label><label for="">
+                </label>
+                <label for="">Graphic card
                     <select name="" id="">
-                        <option value=""></option>
-                        <option value=""></option>
+                        <optgroup label="AMD">
+                        <option>Gigabyte </option>
+                        <option>Asus </option>
+                        <option>Msi</option>
+                        <option>Zotac</option>
+                    </optgroup>
+                    <optgroup label="Nvidia">
+                        <option>Gigabyte </option>
+                        <option>Asus </option>
+                        <option>Msi</option>
+                        <option>Zotac</option>
+                    </optgroup>
                     </select>
-                </label><label for="">
+                </label>
+                <label for="">Power supply
                     <select name="" id="">
-                        <option value=""></option>
-                        <option value=""></option>
+                        <option>Corsair</option>
+                        <option>Gigabyte</option>
+                        <option>Asus</option>
+                        <option>Bandit Power</option>
                     </select>
-                </label><label for="">
+                </label>
+                <label for="">RAM
                     <select name="" id="">
-                        <option value=""></option>
-                        <option value=""></option>
+                        <option>Gigabyte</option>
+                        <option>Kingstone</option>
+                        <option>Corsair</option>
+                        <option></option>
                     </select>
-                </label><label for="">
+                </label>
+                <label for="">Storage
                     <select name="" id="">
-                        <option value=""></option>
-                        <option value=""></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
+                        <option></option>
                     </select>
                 </label>
             </fieldset>        
