--- a/index.html
+++ b/index.html
@@ -32,46 +32,16 @@
                 <label for="processor"> Procesor
                     <select name="processor">
                         <optgroup label="AMD">
-                            <option>Ryzen™ 9 5950X</option>    
-                            <option>Ryzen™ 9 5900X</option>                    
-                            <option>Ryzen™ 9 3900X</option>                     
-                            <option>Ryzen™ 9 3950X</option>                      
-                            <option>Ryzen™ 9 7900X</option>                      
-                            <option>Ryzen™ 9 7950X</option>                       
-                            <option>Ryzen™ 9 7900</option>                      
-                            <option>Ryzen™ 9 7900X3D</option>                     
-                            <option>Ryzen™ 9 7950X3D</option>
-                            <option>Ryzen™ 7 5800X</option>
-                            <option>Ryzen™ 7 5800X3D</option>
-                            <option>Ryzen™ 7 5700G</option> 
-                            <option>Ryzen™ 7 5700X</option> 
-                            <option>Ryzen™ 7 7700X</option>
-                            <option>Ryzen™ 7 7700</option> 
-                            <option>Ryzen™ 7 7800X3D</option>
-                            <option>Ryzen™ 5 5600X</option>
-                            <option>Ryzen™ 5 5600G</option>
-                            <option>Ryzen™ 5 5600</option>
-                            <option>Ryzen™ 5 5500</option>
-                            <option>Ryzen™ 5 4600G</option>
-                            <option>Ryzen™ 5 4500</option>
-                            <option>Ryzen™ 5 3600</option>
-                            <option>Ryzen™ 5 3400G</option>
-                            <option>Ryzen™ 5 7600X</option>
-                            <option>Ryzen™ 5 7600</option>
-                            <option>Ryzen™ 5 7500F</option>
-                            <option>Ryzen™ 3 4100</option> 
-                            <option>Ryzen™ 3 3200G</option> 
-                            <option>Ryzen™ 3 4300G</option>
-                            <option>Threadripper 3990X</option> 
-                            <option>Threadripper 3970X</option> 
-                            <option>Threadripper 3960X</option> 
-                            <option>Threadripper PRO 3995WX</option> 
-                            <option>Threadripper PRO 3975WX</option> 
-                            <option>Threadripper PRO 3955WX</option> 
-                            <option>Threadripper PRO 5000WX</option>  
+                            <option>Ryzen 9</option>
+                            <option>Ryzen 7</option>
+                            <option>Ryzen 5</option>
+                            <option>Ryzen 3</option>
                         </optgroup>
                         <optgroup label="Intel">
-                            <option></option>
+                            <option>Intel Core i9</option>
+                            <option>Intel Core i7</option>
+                            <option>Intel Core i5</option>
+                            <option>Intel Core i3</option>
                         </optgroup>
                     </select>
                 </label>
