dodałem karty graficzne

--- a/index.html
+++ b/index.html
@@ -45,20 +45,29 @@
                         </optgroup>
                     </select>
                 </label>
-                <label for="">Graphic card
-                    <select name="" id="">
+                <label for="Grafika">Karta graficzna
+                    <select name="Grafika" id="">
                         <optgroup label="AMD">
-                        <option>Gigabyte </option>
-                        <option>Asus </option>
-                        <option>Msi</option>
-                        <option>Zotac</option>
-                    </optgroup>
-                    <optgroup label="Nvidia">
-                        <option>Gigabyte </option>
-                        <option>Asus </option>
-                        <option>Msi</option>
-                        <option>Zotac</option>
-                    </optgroup>
+                            <option>Gigabyte</option>
+                            <option>Sapphire</option>
+                            <option>PowerColor</option>
+                            <option>Asus</option>
+                            <option>ASRock</option>
+                            <option>AMD</option>
+                            <option>MSI</option>
+                            <option>XFX</option>
+                        </optgroup>
+                            <optgroup label="Nvidia">
+                            <option>Gigabyte</option>
+                            <option>MSI</option>
+                            <option>Inno3D</option>
+                            <option>Asus</option>
+                            <option>Zotac</option>
+                            <option>Pny</option>
+                            <option>Gainward</option>
+                            <option>Palit</option>
+                            <option>KFA2</option>
+                    <   /optgroup>
                     </select>
                 </label>
                 <label for="">Power supply
