Dodałem płyty głowne

--- a/index.html
+++ b/index.html
@@ -70,12 +70,38 @@
                     <   /optgroup>
                     </select>
                 </label>
-                <label for="">Power supply
-                    <select name="" id="">
-                        <option>Corsair</option>
-                        <option>Gigabyte</option>
+                <label for="Płyta">Płyta głowna
+                    <select name="Płyta">
+                       <optgroup label="Socket 1700">
                         <option>Asus</option>
-                        <option>Bandit Power</option>
+                        <option>ASRock</option>
+                        <option>Gigabyte</option>
+                        <option>MSI</option>
+                        <option>Biostar</option>
+                       </optgroup>
+                       <optgroup label="Socket 1200">
+                        <option>Gigabyte</option>
+                        <option>ASRock</option>
+                        <option>ASUS</option>
+                        <option>MSI</option>
+                        <option>EVGA</option>
+                        <option>NZXT</option>
+                       </optgroup>
+                       <optgroup label="Socket 1151">
+                        <option>ASRock</option>
+                       </optgroup>
+                       <optgroup label="Socket AM5">
+                        <option>ASUS</option>
+                        <option>ASRock</option>
+                        <option>Gigabyte</option>
+                        <option>MSI</option>
+                       </optgroup>
+                       <optgroup label="Socket AM4">
+                        <option>ASUS</option>
+                        <option>ASRock</option>
+                        <option>Gigabyte</option>
+                        <option>MSI</option>
+                       </optgroup>
                     </select>
                 </label>
                 <label for="">RAM
