--- a/index.html
+++ b/index.html
@@ -104,12 +104,30 @@
                        </optgroup>
                     </select>
                 </label>
-                <label for="">RAM
-                    <select name="" id="">
-                        <option>Gigabyte</option>
-                        <option>Kingstone</option>
-                        <option>Corsair</option>
-                        <option>G.Skill</option>
+                <label for="RAM">RAM
+                    <select name="RAM">
+                        <optgroup label="DDR5">
+                            <option>Kingston</option>
+                            <option>Corsair</option>
+                            <option>G.SKILL</option>
+                            <option>Patriot</option>
+                            <option>Goodram</option>
+                            <option>Adata</option>
+                            <option>Crucial</option>
+                            <option>Dell</option>
+                            <option>Lexar</option>
+                            <option>Pny</option>
+                        </optgroup>
+                        <optgroup label="DDR4">
+                            <option">G.Skill</option>
+                            <option">Kingstone</option>
+                            <option">Corsair</option>
+                            <option">Patriot</option>
+                            <option">Goodram</option>
+                            <option">Team Group</option>
+                            <option">Adata</option>
+                            <option">Dell</option>
+                        </optgroup>
                     </select>
                 </label>
                 <label for="">Storage
