--- a/index.html
+++ b/index.html
@@ -130,12 +130,28 @@
                         </optgroup>
                     </select>
                 </label>
-                <label for="">Storage
-                    <select name="" id="">
-                        <option>Samsung</option>
-                        <option>Gigabyte</option>
-                        <option>Corsair</option>
-                        <option>Kingstone</option>
+                <label for="Dysk">Dyski
+                    <select name="Dysk">
+                        <optgroup label="M2">
+                            <option>Transcend</option>
+                            <option>Adata</option>
+                            <option>Corsair</option>
+                            <option>WD</option>
+                            <option>Silicon Power</option>
+                        </optgroup>
+                        <optgroup label="SSD">
+                            <option>Transcend</option>
+                            <option>Kingston</option>
+                            <option>WD</option>
+                            <option>Adata</option>
+                            <option>Crucial</option>
+                        </optgroup>
+                        <optgroup label="HDD">
+                            <option>WD</option>
+                            <option>Seagate</option>
+                            <option>Synology</option>
+                            <option>Toshiba</option>
+                        </optgroup>
                     </select>
                 </label>
             </fieldset>   
