dodałem radio i check boxy

--- a/index.html
+++ b/index.html
@@ -162,11 +162,17 @@
                 </label>
                     <fieldset>
                         <legend>zastosowanie komputera</legend>
-                        <label for="Gry"><input type="radio" value="Gry" name="Gry">Granie</label>
-                        <label for="Praca"><input type="radio" value="Praca" name="Praca">Praca</label>
-                        <label for="Filmy"><input type="radio" value="Filmy" name="Filmy">Przeglądanie internetu</label>
+                        <label for="Gry"><input type="checkbox" value="Gry" name="Gry">Granie</label>
+                        <label for="Praca"><input type="checkbox" value="Praca" name="Praca">Praca</label>
+                        <label for="Filmy"><input type="checkbox" value="Filmy" name="Filmy">Przeglądanie internetu</label>
                     </fieldset>
                 </fieldset>     
+            </fieldset>
+            <fieldset>
+                <legend>Dodatkowe usługi</legend>
+                <label for="">Montaż Pc</label><input type="radio">
+                <label for="">Instalacja systemu</label><input type="radio">
+                <label for="">Wgranie podstawowych programów</label><input type="radio">
             </fieldset>
             <input type="submit">
           </form>
