--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
                             <option>Pny</option>
                         </optgroup>
                         <optgroup label="DDR4">
-                            <option">G.Skill</option>
-                            <option">Kingstone</option>
-                            <option">Corsair</option>
-                            <option">Patriot</option>
-                            <option">Goodram</option>
-                            <option">Team Group</option>
-                            <option">Adata</option>
-                            <option">Dell</option>
+                            <option>G.Skill</option>
+                            <option>Kingstone</option>
+                            <option>Corsair</option>
+                            <option>Patriot</option>
+                            <option>Goodram</option>
+                            <option>Team Group</option>
+                            <option>Adata</option>
+                            <option>Dell</option>
                         </optgroup>
                     </select>
                 </label>
@@ -166,15 +166,20 @@
                         <label for="Praca"><input type="checkbox" value="Praca" name="Praca">Praca</label>
                         <label for="Filmy"><input type="checkbox" value="Filmy" name="Filmy">Przeglądanie internetu</label>
                     </fieldset>
-                </fieldset>     
+                </fieldset>  
+                <fieldset>
+                    <legend>Dodatkowe usługi</legend>
+                    <label for="mon">Montaż Pc</label><input type="radio" name="mon">
+                    <label for="in">Instalacja systemu</label><input type="radio" name="in">
+                    <label for="wgr">Wgranie podstawowych programów</label><input type="radio" name="wgr">
+                    <label for="mal">Malowanie obudowy<input type="radio" name="mal"></label>
+                    <input type="file" name="zdjecie" id="zdjecie">
+                </fieldset>
+                <fieldset>
+                <input type="submit"> <input type="reset"> <label for="date">Data przesłanie zlecenia <input type="datetime-local" name="date" id="date"></label>  
             </fieldset>
-            <fieldset>
-                <legend>Dodatkowe usługi</legend>
-                <label for="">Montaż Pc</label><input type="radio">
-                <label for="">Instalacja systemu</label><input type="radio">
-                <label for="">Wgranie podstawowych programów</label><input type="radio">
             </fieldset>
-            <input type="submit">
+           
           </form>
         </div>
     </div>
